[gd_scene load_steps=8 format=3 uid="uid://cjkj3o2d3vkiq"]

[ext_resource type="StyleBox" uid="uid://eoki4f7rst2x" path="res://assets/art/hud/dark_panel.tres" id="1_1vmgp"]
[ext_resource type="Script" uid="uid://bplj1q15skwh5" path="res://src/gameplay/hud/preview_info.gd" id="2_7dg0l"]
[ext_resource type="Texture2D" uid="uid://cegwrvc3utwup" path="res://assets/art/weather_hot.png" id="3_eh7ct"]
[ext_resource type="Texture2D" uid="uid://cxvgn4jodvfq8" path="res://assets/art/stat_physical.png" id="4_gxhgt"]
[ext_resource type="Texture2D" uid="uid://dv3qtmmwvrt5w" path="res://assets/art/stat_study.png" id="5_5qmwa"]
[ext_resource type="Texture2D" uid="uid://5lx5hh12o8jy" path="res://assets/art/mood_grumpy.png" id="6_6kknw"]
[ext_resource type="Texture2D" uid="uid://dbxi6f6uibdfa" path="res://assets/art/mood_sad.png" id="7_nxfdw"]

[node name="PreviewInfo" type="PanelContainer"]
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_1vmgp")
script = ExtResource("2_7dg0l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TomorrowTitle" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Tomorrow's Weather:"

[node name="TomorrowTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_eh7ct")
stretch_mode = 5

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Improves:"

[node name="ImproveTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_gxhgt")
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Weakens:"

[node name="WeakenTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_5qmwa")
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Bonus Effects During:"

[node name="BonusEffectTextures" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="BonusEffectTexture1" type="TextureRect" parent="MarginContainer/VBoxContainer/BonusEffectTextures"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("6_6kknw")
expand_mode = 1
stretch_mode = 4

[node name="BonusEffectTexture2" type="TextureRect" parent="MarginContainer/VBoxContainer/BonusEffectTextures"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("7_nxfdw")
expand_mode = 1
